# MidProjectMugnaiLorenzo

./: CMakeLists.txt  README.md  main.cpp  output.txt
AoS/: Manage.cpp  Manage.h  ManageParallel.cpp  ManageParallel.h  Ngram.cpp  Ngram.h  ParallelAoS.cpp  ParallelAoS.h  SequentialAoS.cpp  SequentialAoS.h
SoA/: ParallelSoA.cpp  ParallelSoA.h  SequentialSoA.cpp  SequentialSoA.h
Testi/: book0.txt  book1.txt  book10.txt  book11.txt  book12.txt  book13.txt  book14.txt  book15.txt  book17.txt  book18.txt  book19.txt  book2.txt  book20.txt  book21.txt  book22.txt  book23.txt  book24.txt  book26.txt  book27.txt  book28.txt  book3.txt  book4.txt  book5.txt  book6.txt  book7.txt  book8.txt  book9.txt
include/: Benchmark.cpp  Benchmark.h  gplot++.h
